fix(bootstrap): resolve SonarCloud code smells
- Rename DefaultErrorHandler lambda params from 'record' (a restricted
  identifier) to 'consumerRecord'.
- Replace Stream.collect(Collectors.toList()) with Stream.toList() in
  ModuleBootstrapService (results are only read).